--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/BlogCard/styles.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Document</title>
+    <link rel="shortcut icon" href="/BlogCard/assets/images/favicon-32x32.png" type="faviicon.ico">
+    <title>BlogCard</title>
 </head>
     <body>
         <div class="bloco-central">
